fleshed out database more, rudamentary register, list users api roputes
