# src/swagger_output.json
@@ -12,8 +12,80 @@
     }
   ],
   "paths": {
+    "/register": {
+      "post": {
+        "tags": [
+          "User Managment"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Returns confirmation and username",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/registerResponse"
+                },
+                "example": {
+                  "message": "User successfully created",
+                  "username": "JonDoe"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/registerRequest"
+              },
+              "example": {
+                "username": "Jon",
+                "password": "Doe"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "tags": [
+          "User Managment"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Returns all users and their lists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/userResponseArray"
+                },
+                "example": [
+                  {
+                    "username": "JonDoe"
+                  }
+                ]
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/test": {
       "get": {
+        "tags": [
+          "test"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -29,6 +101,9 @@
         }
       },
       "post": {
+        "tags": [
+          "test"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -52,6 +127,9 @@
     },
     "/test2": {
       "get": {
+        "tags": [
+          "test"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -76,6 +154,106 @@
       }
     },
     "schemas": {
+      "registerRequest": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "string"
+              }
+            }
+          },
+          "password": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "string"
+              }
+            }
+          }
+        },
+        "required": [
+          "username",
+          "password"
+        ]
+      },
+      "registerResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "string"
+              }
+            }
+          },
+          "username": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "string"
+              }
+            }
+          }
+        }
+      },
+      "userResponseArray": {
+        "type": "object",
+        "properties": {
+          "users": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "array"
+              },
+              "items": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "object"
+                  },
+                  "properties": {
+                    "type": "object",
+                    "properties": {
+                      "username": {
+                        "type": "object",
+                        "properties": {
+                          "type": {
+                            "type": "string",
+                            "example": "string"
+                          }
+                        }
+                      }
+                    }
+                  },
+                  "required": {
+                    "type": "array",
+                    "example": [
+                      "username"
+                    ],
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "additionalProperties": {
+                    "type": "boolean",
+                    "example": false
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "testResponse": {
         "type": "object",
         "properties": {
